Start writing paper

--- a/paper.tex
+++ b/paper.tex
@@ -7,10 +7,10 @@
 % to avoid loading the natbib package, add option nonatbib:
 % \usepackage[nonatbib]{nips_2016}
 
-\usepackage{nips_2016}
+%\usepackage{nips_2016}
 
 % to compile a camera-ready version, add the [final] option, e.g.:
-% \usepackage[final]{nips_2016}
+\usepackage[final]{nips_2016}
 
 \usepackage[utf8]{inputenc} % allow utf-8 input
 \usepackage[T1]{fontenc}    % use 8-bit T1 fonts
@@ -21,7 +21,7 @@
 \usepackage{nicefrac}       % compact symbols for 1/2, etc.
 \usepackage{microtype}      % microtypography
 
-\title{Formatting instructions for NIPS 2016}
+\title{Temporal Activity Detection in Untrimmed Videos with RNN}
 
 % The \author macro works with any number of authors. There are two
 % commands used to separate the names and addresses of multiple
@@ -34,34 +34,22 @@
 % author name.
 
 \author{
-  David S.~Hippocampus\thanks{Use footnote for providing further
-    information about author (webpage, alternative
-    address)---\emph{not} for acknowledging funding agencies.} \\
-  Department of Computer Science\\
-  Cranberry-Lemon University\\
-  Pittsburgh, PA 15213 \\
-  \texttt{hippo@cs.cranberry-lemon.edu} \\
-  %% examples of more authors
-  %% \And
-  %% Coauthor \\
-  %% Affiliation \\
-  %% Address \\
-  %% \texttt{email} \\
-  %% \AND
-  %% Coauthor \\
-  %% Affiliation \\
-  %% Address \\
-  %% \texttt{email} \\
-  %% \And
-  %% Coauthor \\
-  %% Affiliation \\
-  %% Address \\
-  %% \texttt{email} \\
-  %% \And
-  %% Coauthor \\
-  %% Affiliation \\
-  %% Address \\
-  %% \texttt{email} \\
+    Alberto Montes \\
+    Polytechnic University of Catalonia \\
+    Barcelona, Catalonia/Spain \\
+    \texttt{al.montes.gomez@gmail.com} \\
+    \And
+    Amaia Salvador \\
+    Image Processing Group \\
+    Polytechnic University of Catalonia \\
+    Barcelona, Catalonia/Spain \\
+    \texttt{amaia.salvador@upc.edu} \\
+    \And
+    Xavi Giro-i-Nieto \\
+    Image Processing Group \\
+    Polytechnic University of Catalonia \\
+    Barcelona, Catalonia/Spain \\
+    \texttt{xavier.giro@upc.edu} \\
 }
 
 \begin{document}
@@ -70,12 +58,7 @@
 \maketitle
 
 \begin{abstract}
-  The abstract paragraph should be indented \nicefrac{1}{2}~inch
-  (3~picas) on both the left- and right-hand margins. Use 10~point
-  type, with a vertical spacing (leading) of 11~points.  The word
-  \textbf{Abstract} must be centered, bold, and in point size 12. Two
-  line spaces precede the abstract. The abstract must be limited to
-  one paragraph.
+    In the later years the applications of Deep Learning techniques have moved from images to videos due to the increase of computational resources available. In this field and in the classification task 
 \end{abstract}
 
 \section{Submission of papers to NIPS 2016}
