--- a/paper.tex
+++ b/paper.tex
@@ -162,7 +162,7 @@ talk about different experiments with values of $\gamma$ and k
 
 \section{Conclusion}
 
-Explain conclusion
+Explain conclusions. Give at the footnote to the repo where all the code is available.
 
 
 
