Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -46,7 +46,7 @@
     Barcelona, Catalonia/Spain \\
     \texttt{amaia.salvador@upc.edu} \\
     \And
-    Xavi Giro-i-Nieto \\
+    Xavier Giro-i-Nieto \\
     Image Processing Group \\
     Polytechnic University of Catalonia \\
     Barcelona, Catalonia/Spain \\
