--- a/paper.tex
+++ b/paper.tex
@@ -22,7 +22,7 @@
 \usepackage{microtype}      % microtypography
 \usepackage{amsmath}        % equations
 
-\title{Temporal Activity Detection in Untrimmed Videos with RNN}
+\title{Temporal Activity Detection in Untrimmed Videos with Recurrent Neural Networks}
 
 % The \author macro works with any number of authors. There are two
 % commands used to separate the names and addresses of multiple
@@ -36,20 +36,20 @@
 
 \author{
     Alberto Montes \\
-    Polytechnic University of Catalonia \\
-    Barcelona, Catalonia/Spain \\
+    Universitat Politècnica de Catalunya \\
+    Barcelona, Spain \\
     \texttt{al.montes.gomez@gmail.com} \\
     \And
     Amaia Salvador \\
     Image Processing Group \\
-    Polytechnic University of Catalonia \\
-    Barcelona, Catalonia/Spain \\
+    Universitat Politècnica de Catalunya \\
+    Barcelona, Spain \\
     \texttt{amaia.salvador@upc.edu} \\
     \And
     Xavier Giro-i-Nieto \\
     Image Processing Group \\
-    Polytechnic University of Catalonia \\
-    Barcelona, Catalonia/Spain \\
+    Universitat Politècnica de Catalunya \\
+    Barcelona, Spain \\
     \texttt{xavier.giro@upc.edu} \\
 }
 
@@ -60,8 +60,13 @@
 
 \begin{abstract}
 
-    In the later years the applications of Deep Learning techniques have moved from images to videos due to the increase of computational resources available. In this work, we propose a simple pipeline to classify and temporally localize activities on videos. The framework consist on a first stage to extract features from video segments using a 3D CNN and then a RNN which will predict a classification for each segment of the video. Some post-processing was applied at the output to be able to temporally localize activities on each video.
+% AMAIA: La primera frase de l'abstract potser no cal, ja que és massa introductoria. L'he comentat i modificat l'abstract
 
+    %In the later years the applications of deep learning techniques have moved from images to videos due to the increase of computational resources available. 
+    
+    This work proposes a simple pipeline to classify and temporally localize activities in untrimmed videos. Our system uses features from a 3D Convolutional Neural Network (3D-CNN) as input to train a a recurrent neural network (RNN) that learns to classify each segment of the video. After training, we post-process the output of the RNN to be able to both assign a single activity label to each video and temporally localize when that activity happens within the input video. We find that our system can achieve competitive results in both tasks with a simple architecture composed. We evaluate our method in the ActivityNet Challenge 2016, achieving a 0.00 mAP and a 0.00 mAP in the classification and detection tasks, respectively. Our code and models can be found at: \url{ https://github.com/imatge-upc/activitynet-2016-cvprw}
+
+%AMAIA: s'han d'afegir els valors de mAP (o la metrica que sigui)
 \end{abstract}
 
 \section{Introduction}
@@ -70,99 +75,115 @@ Recognizing activities in videos has become a hot topic over the last years due 
 This large amount of data requires an automatic indexing to be accessed after capture.
 The recent advances in video coding, storage and computational resources have boosted research in the field towards new and more efficient solutions for organizing and retrieving video content.
 
-Impressive progress has been reported in the recent literature for video classification %% cites
-Recently it was starting facing the challenge to detect activities in untrimmed videos and this motivate another challenging topic: temporal localization of activities in videos.
-This task present a lot of real applications such as automatic trimmed of videos to keep the most interesting part.
-We wanted to face this challenge and that is why we propose a simple pipeline which can be able to perform in both tasks. Our proposal consist in a Convolutional Neural Network to exploit spatial and short temporal correlations and then a Recurrent Neural Network which exploits long temporal correlations.
+Impressive progress has been reported in the recent literature for video classification \cite{}, which requires to assign a label for the input video. While this task is already challenging, it typically requires videos to be trimmed beforehand (i.e. the category is present in the entire video). However, a video classification system should be able to recognize activities in untrimmed videos, and find the temporal segments in which they appear. This second challenge has been recently proposed in the ActivityNet Challenge 2016 \cite{}, in which participants are asked to both provide a single activity for each video, as well as the temporal segment where the activity happened in the video. % AMAIA: Amb això et refereixes que la tasca de detecció temporal es nova d'Activitynet? Ho he modificat una mica... No queda massa clar... Si és així, jo directament mencionaria la challenge i la citaria.
+In order to face both these challenges at the same time, we propose a simple pipeline composed of a 3D-CNN that exploits spatial and short temporal correlations followed by a recurrent neural network which exploits long temporal correlations.
+
+% AMAIA: Decidim si volem dir 'CNN' o 'ConvNet'. Ara ho he deixat tot amb CNN. Millor no barrejar
 
 \section{Related work}
 
-The activity classification and temporal localization tasks have been proposed with datasets such as Sports1M~\cite{KarpathyCVPR14}, THUMOS~\cite{THUMOS15} or ActivityNet~\cite{caba2015activitynet} published in the recents years. Many frameworks have been proposed to solve this tasks.
-Most of them use a Convolutional Neural Network to exploit the spatial correlations at each frame of the video such as in~\cite{gkioxari2015contextual,yeung2015end,ballas2015delving}.
-But as videos also present temporal correlations, the combination of the frames information and the computed optical flow has been used~\cite{wang2015towards} in a CNN to improve the results.
+% AMAIA: El related work dels datasets me'l saltaria per guanyar espai. L'he comentat.
 
-Recently, was proposed by~\cite{tran2014learning} a new CNN which use 3D convolutions instead of 2D and apply them into chunks of video frames to classify videos. This 3D convolutions exploits short temporal correlations between frames and have demonstrated to work well in classifying videos~\cite{tran2014learning,tran2015deep}.
-In addition to this solutions, it has been proposed~\cite{shoutemporal} a multi-stage 3D CNN in order to predict temporal localization in videos in addition to the classification.
+%The activity classification and temporal localization tasks have been proposed with datasets such as Sports1M~\cite{KarpathyCVPR14}, THUMOS~\cite{THUMOS15} or ActivityNet~\cite{caba2015activitynet} published in the recents years. Many frameworks have been proposed to solve this tasks.
+Several works in the literature have used 2D-CNNs to exploit the spatial correlations between frames of a video by combining their outputs using different strategies~\cite{gkioxari2015contextual,yeung2015end,ballas2015delving}. Others have tried using the optical flow as an additional input to the 2D-CNN videos~\cite{wang2015towards}, which provides information of the temporal correlations. % AMAIA: Tot això s'ha de revisar...
 
-Finally, in relation with the temporal localization of activities, it has been proposed the use of Recurrent Neural Networks.
-This networks exploit long and short temporal correlations and this caracteristic make them very suitable for video applications.
-It has been proposed the usage of RNN after CNN~\cite{yao2015describing} and also using reinforcement learning~\cite{yeung2015every} to temporally localize activities in videos.
+Later on, 3D-CNNs were proposed in ~\cite{tran2014learning}, which were able to exploit short temporal correlations between frames and have demonstrated to work remarkably well for video classification~\cite{tran2014learning,tran2015deep}. 3D-CNNs have also been used for temporal detection in~\cite{shoutemporal}, where multi-stage 3D-CNN architecture is used to classify video segment proposals.
 
-\section{Details of the proposed network}
+For temporal activity detection, recent works have proposed the usage of Long Short-Term Memory units (LSTM) \cite{}. LSTMs are a type of RNNs that is able to better exploit long and short temporal correlations in sequences, which makes them suitable for video applications. LSTMs have been used alongside CNNs for video classification ~\cite{yao2015describing} and activity localization in videos~\cite{yeung2015every}.
 
-\paragraph{3D Convolutional Neural Network.}
-First, each video is split in clips of 16 frames and then each clip is resized ot 171 (width) $\times$ 128 (heigh) pixels.
-This is the input size of the C3 ConvNet proposed in~\cite{tran2014learning}.
-This network conducts 3D convolutions/pooling which operates in spatial and temporal dimensions simultaneously, and therefore can capture both appearance and motion.
-All 3D pooling layers use a 2$\times$2 max pooling with stride 2 in spatial dimensions, the same kernel size as in the temporal dimension except the first pooling layer (\texttt{pool1}) which has kernel size 1 and stride 1. All 3D convolutional filters have kernel size 3 and stride 1 in all dimensions.
+% AMAIA: Aquí falta una frase que digui què fem diferent nosaltres, en què ens assemblem a l'estat de l'art...
 
-The network architecture used is the same as in the original paper except that it has been decided to work on the next stage with the values obtained at the \texttt{fc6} layer as feature vector for each 16-frame clip. The specifications of the network layers as well as the number of kernels by layer is the following one: \texttt{conv1(64) - pool1 - conv2a(128) - pool2 - conv3a(256) - conv3b(256) - pool3 - conv4a(512) - conv4b(512) - pool4 - conv5a(512) - conv5b(512) - pool(5) - fc6(4096)}.
+\section{Proposed Architecture}
+% AMAIA: He tret això dels paràgrafs, ja que ocupen massa espai i no tenim tantes coses per explicar...
 
-This 3D ConvNet was trained on Sports1M training subset~\cite{tran2014learning} and the resulting network weights were used to extract feature vectors for our network.
+% AMAIA: Ja sé que són 4 pàgines...però crec que estaria bé posar la figura de l'arquitectura no?? Potser, per aprofitar l'espai, pots fer una figura doble (o triple), i en cada columna pots posar una cosa: e.g. 1. Arquitectura (figura 1.1 de la teva memoria) 2. exemples visuals(que mostrin un frame del video, prediccio i groundtruth). La figura que també m'agrada és la 4.10 o 4.11 de la memòria (potser no cal posar-la sencera), on expliques diferents prediccions (a vegades la detecció està bé pero la classe global no, o al revés...). Jo crec que aquestes figures t'ajudaran a explicar els resultats i conclusions. https://imatge.upc.edu/web/sites/default/files/pub/xMontes.pdf
 
-\paragraph{Recurrent Neural Network.}
-The next step is to use a RNN to exploit long temporal correlations between video clips. Our proposal consist on using LSTM cells thanks to its long term memory.
-The network has been design to given a sequence of features vectors, return a sequence of classes corresponding the probability of each clip belong to one of the classes of the dataset.
-To avoid overfitting it has been dropout before and after the recurrent layers with probabily $p = .5$. Also the output correspond to a Softmax with the same number of outputs as number of classes $K$ plus the background class.
+% AMAIA: Pel tema de les figures, si veus que ocupa molt pots descartar-ne alguna... depen del que vulguis explicar a la secció d'experiments
 
-The recurrent network have the following architecture: \texttt{input(4096) - dropout(.5) - N $\times$ lstm(c) - dropout(.5) - softmax(K+1)}. Different configurations of the number of LSTM layers $M$ and the number of cells $c$ has been tested in order to find the one with best performance.
+%\paragraph{3D-CNN.}
+We use the 3D-CNN model proposed in~\cite{tran2014learning} to extract features for all videos in the database. We split the videos in 16-frame clips and resize them to 171$\times$128 to fit the original model's desired input. Features from the second fully connected layer (fc6) are extracted for each video clip.
 
-\paragraph{Training procedure.}
-From our proposed network, only the second stage was trained due to computational restrictions and the fact that the first stage was already trained with a video dataset.
-To train the recurrent network with the extracted features, was found that most of the videos had a clip length larger than a valid timestep at training, so a stateful approach was used at training where the memory was not reset between batches and at the same batch position was placed the continuation of the features of the previous seen video.
+% AMAIA: Els detalls de la xarxa no calen, ja que no l'hem dissenyat nosaltres. Els comento
 
-In addition to this, it was also required to weight the loss function due to the imbalance of the output classes where the background instances present a higher frequence of appearance. The loss used at training was the categorical cross entropy and the weigthed for is as follows, where $q$ is the predicted probability distribution and $p$ the ground truth probability distribution:
+%This network conducts 3D convolutions/pooling which operates in spatial and temporal dimensions simultaneously, and therefore can capture both appearance and motion.
+%All 3D pooling layers use a 2$\times$2 max pooling with stride 2 in spatial dimensions, the same kernel size as in the temporal dimension except the first pooling layer (\texttt{pool1}) which has kernel size 1 and stride 1. All 3D convolutional filters have kernel size 3 and stride 1 in all dimensions.
+%The network architecture used is the same as in the original paper except that it has been decided to work on the next stage with the values obtained at the \texttt{fc6} layer as feature vector for each 16-frame clip. The specifications of the network layers as well as the number of kernels by layer is the following one: \texttt{conv1(64) - pool1 - conv2a(128) - pool2 - conv3a(256) - conv3b(256) - pool3 - conv4a(512) - conv4b(512) - pool4 - conv5a(512) - conv5b(512) - pool(5) - fc6(4096)}.
 
-\begin{equation}
-    H(p,q) = - \sum_x \alpha(x) p(x) \log (q(x)), \text{ where } \alpha(x) =
-    \begin{cases}
-        \rho, & x = \text{background instance}\\
-        1,    & \text{otherwise}
-    \end{cases}
-\end{equation}
+%\paragraph{Recurrent Neural Network.}
+Next, we design a network that takes a sequence of 3D-CNN-f6 features from a video, and returns a sequence of class probabilities for each element in the sequence. We use LSTM layers, followed with dropout with $p = .5$ and a fully connected layer with a softmax activation. Figure \ref{} shows the proposed architecture. Different configurations of the number of LSTM layers $M$ and the number of cells $c$ have been tested and will be reviewed in the following sections.
 
-\paragraph{Post-Processing.}
-The prediction of the recurrent network consist on a sequence of probabilities corresponding to each of the classes at the dataset.
-The goal of this network is to be able to classify globaly the video given at the input and also the temporal localization of the activity previously classified. To achieve so, some post-processing is required. To classify the video, the mean is computed along all the sequence predicted as follows:
+%The recurrent network have the following architecture: \texttt{input(4096) - dropout(.5) - N $\times$ lstm(c) - dropout(.5) - softmax(K+1)}.
 
-\begin{equation}
-	p_{video}(x) = \frac{1}{T_{video}} \sum_i^{video} p_i(x), \text{where } x \in \{ \text{Dataset Activities}\}
-\end{equation}
+%\paragraph{Training.}
+%To train the recurrent network with the extracted features, was found that most of the videos had a clip length larger than a valid timestep at training, so a stateful approach was used at training where the memory was not reset between batches and at the same batch position was placed the continuation of the features of the previous seen video.
 
-where $T_{video}$ is the length of the video in number of 16-frames clips. From the obtain probability of the video to belong to each of the classes, the class with the maximum probability is chosen for the classification task.
+% AMAIA: Això de stateful i tal no cal no?
 
-On the other hand, to obtain the temporal localization of the class previously predicted, first is passed the sequence of probabilities in a mean filter of $k$ samples to smooth the values along time space as in Equation~\ref{eq:smooth}. Then the probability of activity is computed at each step of the sequence such as in Equation~\ref{eq:activity_probability}. Finally a threshold $\gamma$ is set and all the clips with an activity probability higher than $\gamma$ are considered for detection.
+\section{Post-Processing}
+Given a video, the prediction of our model is sequence of class probabilities for each 16-frame video clip. From this output, we need to be able to predict the activity  and temporally localize it. We post-process the network's output to achieve that goal. First, to obtain the activity prediction for the whole video, we simply compute the mean over all video clips in the video. We then take the class with maximum predicted probability as the predicted class.
+
+%\begin{equation}
+%	p(x) = \frac{1}{T} \sum_i^{T} p_i(x)
+%\end{equation}
+
+%where $T$ is number of video clips of 16 frames in the video. 
+% AMAIA: No cal posar l'equació de la mitja...
+
+To obtain the temporal localization of the predicted activity, we first apply a mean filter of $k$ samples to the predicted sequence to smooth the values through time (see equation~\ref{eq:smooth}). Then, the probability of activity (vs no activity) is computed for all samples of the sequence, being the activity probability the sum of all activity probabilities, and the no activity probability, the one assigned to the background class. Finally, a threshold $\gamma$ is set and all clips with probability higher than $\gamma$ are considered as part of the detected temporal segment for the previously assigned activity.
 
 \begin{equation}
 	\tilde{p}_i(x) = \frac{1}{2k} \sum_{j=i-k}^{i+k} p_i(x)
     \label{eq:smooth}
 \end{equation}
 
-\begin{equation}
-    \label{eq:activity_probability}
-	\tilde{p}^a_i = \sum_{x=1}^{200}\tilde{p}_i(x), \text{where } x = \begin{cases}
-        0, & \text{background class} \\
-        i, & 1 \leq i \leq 200 \text{ activity classes}
-    \end{cases}
-\end{equation}
+% \begin{equation}
+%     \label{eq:activity_probability}
+% 	\tilde{p}^a_i = \sum_{x=1}^{N}\tilde{p}_i(x), \text{where } x = \begin{cases}
+%         0, & \text{background class} \\
+%         i, & 1 \leq i \leq N \text{ activity classes}
+%     \end{cases}
+% \end{equation}
+
+% AMAIA: Aquesta equació està be ?? Vull dir, no cal posar where x = blabla..., és simplement la suma de les probabilitats de 1 a N no? De fet crec que tampoc cal posar-la... Ho he explicat al text. Potser podria quedar més clar...
 
 \section{Experiments}
 
 \subsection{Dataset}
+For all our experiments we use the dataset provided in the ActivityNet Challenge 2016 \cite{}. This dataset contains 640 hours of video and 64 million frames. The ActivityNet dataset is composed of untrimmed videos, providing temporal annotations for the given ground truth class labels.
 
-Talk about ActivityNet dataset
+\subsection{Training}
+% AMAIA: He mogut la part de training a experiments
+We train the network described in Section \ref{} with the negative log likelihood loss, assigning a lower weight to background samples to deal with dataset imbalance( see equation \ref{eq:loss}). 
 
-\subsection{Network configurations}
+\begin{equation}
+    L(p,q) = - \sum_x \alpha(x) p(x) \log (q(x)), \text{ where } \alpha(x) =
+    \begin{cases}
+        \rho, & x = \text{background instance}\\
+        1,    & \text{otherwise}
+    \end{cases}
+    \label{eq:loss}
+\end{equation}
+
+
+where $q$ is the predicted probability distribution and $p$ the ground truth probability distribution. In our experiments, we set $\rho$ = X. 
+% What is the value of \rho ??
+
+% AMAIA: Aquí tambe hauries d'afegir el numero de iteracions (o epochs), learning rate, optimizer, batch size. Si el tens, el temps d'entrenament en la GPU que entrenessis.
+
+
+\subsection{Results}
 
 Talk about different values of N and c
-
-\subsection{Post-processing parameters}
-
 talk about different experiments with values of $\gamma$ and k
 
+% AMAIA: Crec que amb una secció on expliquis tots els experiments ja n'hi ha prou. Li he posat el nom de 'Results'
+
+% AMAIA: Si aqui vols parlar del bias towards sport categories, hauries d'afegir la figura que tens que ho demostra. 
 \section{Conclusion}
 
 Explain conclusions. Give at the footnote to the repo where all the code is available.
+
+% AMAIA: La url del repo ja l'he posat a l'abstract.
 
 
 
