--- a/paper.tex
+++ b/paper.tex
@@ -21,6 +21,7 @@
 \usepackage{nicefrac}       % compact symbols for 1/2, etc.
 \usepackage{microtype}      % microtypography
 \usepackage{amsmath}        % equations
+\usepackage{color}
 
 \title{Temporal Activity Detection in Untrimmed Videos with Recurrent Neural Networks}
 
@@ -64,7 +65,7 @@
 
     %In the later years the applications of deep learning techniques have moved from images to videos due to the increase of computational resources available. 
     
-    This work proposes a simple pipeline to classify and temporally localize activities in untrimmed videos. Our system uses features from a 3D Convolutional Neural Network (3D-CNN) as input to train a a recurrent neural network (RNN) that learns to classify each segment of the video. After training, we post-process the output of the RNN to be able to both assign a single activity label to each video and temporally localize when that activity happens within the input video. We find that our system can achieve competitive results in both tasks with a simple architecture composed. We evaluate our method in the ActivityNet Challenge 2016, achieving a 0.00 mAP and a 0.00 mAP in the classification and detection tasks, respectively. Our code and models can be found at: \url{ https://github.com/imatge-upc/activitynet-2016-cvprw}
+    This work proposes a simple pipeline to classify and temporally localize activities in untrimmed videos. Our system uses features from a 3D Convolutional Neural Network (3D-CNN) as input to train a a recurrent neural network (RNN) that learns to classify video clips of 16 frames. After clip prediction, we post-process the output of the RNN to assign a single activity label to each video, and determine the temporal boundaries of the activity within the video. We show how our system can achieve competitive results in both tasks with a simple architecture. We evaluate our method in the ActivityNet Challenge 2016, achieving a 0.00 mAP and a 0.00 mAP in the classification and detection tasks, respectively. Our code and models are publicly acailable at at: \url{ https://github.com/imatge-upc/activitynet-2016-cvprw}
 
 %AMAIA: s'han d'afegir els valors de mAP (o la metrica que sigui)
 \end{abstract}
