Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -72,7 +72,7 @@
 
 \section{Introduction}
 
-Recognizing activities in videos has become a hot topic over the last years due to the continuous increase of video cameras devices and online repositories.
+Recognizing activities in videos has become a hot topic over the last years due to the continuous increase of video capturing devices and online repositories.
 This large amount of data requires an automatic indexing to be accessed after capture.
 The recent advances in video coding, storage and computational resources have boosted research in the field towards new and more efficient solutions for organizing and retrieving video content.
 
